--- a/biome.json
+++ b/biome.json
@@ -4,7 +4,7 @@
     "enabled": true
   },
   "files": {
-    "ignore": ["node_modules", "dist", "src/components/ui", ".react-router"]
+    "ignore": ["node_modules", "build", "src/components/ui", ".react-router"]
   },
   "formatter": {
     "enabled": true,
