--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint:fix": "biome lint --write --unsafe .",
     "check": "biome check .",
     "check:fix": "biome check --write --unsafe .",
-    "test:integration": "vitest",
+    "test:unit": "vitest",
     "test:e2e": "playwright test"
   },
   "dependencies": {
@@ -39,9 +39,12 @@
     "@playwright/test": "^1.50.1",
     "@react-router/dev": "^7.2.0",
     "@tailwindcss/vite": "^4.0.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "jsdom": "^26.0.0",
     "react-router-devtools": "^1.1.0",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.7.2",
