--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-router/fs-routes": "^7.2.0",
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
+    "@tanstack/react-query": "^5.66.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "compressorjs": "^1.2.1",
